[tool.poetry]
name = "reusable_llm_provider"
version = "0.1.0"
description = "Reusable LLM provider abstraction layer supporting Anthropic, OpenAI, Vertex AI, and Ollama"
authors = ["Reuben Brasher <rkbrasher@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "reusable_llm_provider"}]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.76.0"
openai = "^2.15.0"
langchain-anthropic = "^1.3.1"
langchain-openai = "^1.1.7"
langchain-ollama = "^1.0.1"
google-genai = "^1.61.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
black = "^26.3.1"
flake8 = "^7.3.0"
coverage = "^7.12.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["reusable_llm_provider/tests"]
