[tool.poetry]
name = "reusable_llm_provider"
version = "0.2.0"
description = "Reusable LLM provider abstraction layer supporting Anthropic, OpenAI, Vertex AI, and Ollama"
authors = ["Reuben Brasher <rkbrasher@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "reusable_llm_provider"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.12.0"
anthropic = "^0.76.0"
openai = "^2.15.0"
langchain-anthropic = "^1.3.1"
langchain-openai = "^1.1.7"
langchain-ollama = "^1.0.1"
langchain-google-vertexai = "^3.2.0"
google-genai = "^1.61.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0"
pytest = "^9.0.1"
ruff = "^0.15.11"
coverage = "^7.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["reusable_llm_provider/tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"_version.py" = ["F841"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/functional_tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
